Changelog
=========

Git 497-507
- Last version for other images, Open Vision has the new generation with smart checks.
- Maxytec Multibox Plus support
- Python 3 compatible.
- Get rid of dev boxes: cc1, v8plus, bcm7358, vp7358ci
- Turkish translation updated, Thanks to https://github.com/audi06

Git 485-496
- Use boxbranding when enigma getBoxType isn't available, Thanks to https://github.com/s3n0
- Get rid of dinobot u42/u43 duplicates
- Some log messages changed
- Open Vision detection changed to work on all images, Thanks to https://github.com/athoik
- Multilib full support by Persian Prince and https://github.com/nautilus7
- Greek translation updated, Thanks to https://github.com/nautilus7

Git 466-484
- Octagon SF8008m support
- Edision OS mini4k support
- Qviart Lunix Co support
- Small optimization in Greek translation, Thanks to https://github.com/nautilus7
- GigaBlue X3 4K support
- Smart Open Vision detection by Persian Prince and Hains
- AXAS E4HD Ultra 4K fix

Git 451-465
- GigaBlue IP 4K support
- IZIBox X3/Eco Twin HD support
- Remove superfluous usage of skin_default in image paths.
- Ferguson Ariva ATV Combo/Twin support
- JamesDonkey HD Duo support
- Protek 4K X1 support
- Spycat Mini V2 support
- Reduce hd60/hd61 code.
- Fix flash/backup hd60, Thanks to https://github.com/betacentauri
- Use proper kernel filename (can also be uImage) to get kernel size, Thanks to https://github.com/betacentauri
- Vivant Dinobot U43 support
- AX Ultra support
- Fix HiSilicon model detection.

Git 442-450
- Zgemma H10 support
- Anadol Pro HD5 support
- AXAS His Twin fix image folder
- Amiko Viper 4K support
- Fix identification for lunix4k, Thanks to https://github.com/Dima73
- Edision OS mio4kplus support

Git 430-441
- AXAS His C 4K support
- AXAS His Twin support
- Don't chmod executable files anymore, bitbake should do that.
- Travis CI support.
- Open Vision uses MACHINE names so we have vusolo4k instead of solo4k.
- Be more accurate for Open Vision.