@@ -21,9 +21,22 @@ if [ -d "/usr/lib64" ]; then
 else
 	LIBDIR="/usr/lib"
 fi
+PYVERSION=$(python -V 2>&1 | grep -Po '(?<=Python )(.+)')
+case $PYVERSION in
+	2.*)
+		PYEXT=pyo
+		;;
+	3.*)
+		PYEXT=pyc
+		;;
+esac
+if [ -z $PYVERSION ]; then
+	echo "Unable to determine installed Python version!"
+	exit 1
+fi
 
 export LANG=$1
-export SHOW="python $LIBDIR/enigma2/python/Plugins/Extensions/BackupSuite/message.pyo $LANG"
+export SHOW="python $LIBDIR/enigma2/python/Plugins/Extensions/BackupSuite/message.$PYEXT $LANG"
 export HARDDISK=0
 echo -n $YELLOW
 $SHOW "message43"   	#echo "Full back-up to the MultiMediaCard"
